[package]
name = "kasser"
version = "0.0.1"
authors = ["Dariusz Depta <wisbery@users.noreply.github.com>"]
description = "Private crate registry"
documentation = "https://docs.rs/kasser"
repository = "https://github.com/wisbery/kasser.git"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
